--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
 
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
 }
 
 application {
