Add class for managing user input
You pass options to it and the user is prompted with those options - picking them by typing a corresponding number.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,3 +31,8 @@ application {
     // Define the main class for the application.
     mainClass = 'pao.library.App'
 }
+
+// Make input using Scanner work
+run {
+    standardInput = System.in
+}
